--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,10 @@
-FROM node:18-alpine
+FROM node:18
+
 WORKDIR /app
-COPY . .
+
+COPY package*.json ./
 RUN npm install
-RUN npm run build
-EXPOSE 80
-CMD ["npx", "serve", "-s", "build"]
+
+COPY . .
+
+CMD ["npm", "run", "dev", "--", "--host", "--port", "80"]
